test/tasty/neg/src-2/ExperimentalDefs_pre.scala
import tastytest.ExperimentalObj
import tastytest.ExperimentalClass

@scala.annotation.experimental
object ExperimentalDefsPre {

  class SubExperimentalNotExperimental extends ExperimentalClass

}
